=======
CHANGES
=======

0.4 (Unreleased)
----------------

- Added 'registerIn' module directive, it allows
  to redirect all registrations to different Components object.

- Added ability to load grokkers before other code. Usefull
  if package implements grokkers and uses them at the same time.

- Re-register objectEventNodify handler rather than just register.
  This fixes bug with event been send two times.


0.3 (2011-06-02)
----------------

- Allow to redefine context of 'action' directive
  by passing frame object as '__frame' parameter.


0.1 (2011-05-27)
----------------

- Initial release